# Voco-ai

./: .gitignore  .windsurfrules  BETA_SETUP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Claude.md  DOGFOOD_SESSION.md  LICENSE  PRODUCTION_DEPLOYMENT_CHECKLIST.md  README.md  RELEASE_NOTES_v2.0.0.md  SECURITY.md  YC_AGENT_SESSION.txt  plan.md  start-dogfood.ps1  voco-mcp.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
.windsurf/plans/: PLAN_MODE_PROMPT.md  documentation-update-d0d1c3.md
Docs/: BETA_OUTREACH_CONTACTS.md  BUSINESS_MODEL.md  CHANGELOG.md  Core-Features-List.md  DEMO_STRATEGY.md  DEPLOY.md  GTM.md  ICP_AND_PERSONAS.md  MARKETING_COPY.md  MOBILE_BUILD_SETUP.md  OFFICIAL_DOCS.md  POST_BETA_ROADMAP.md  PRD.md  QUICKSTART.md  RELEASE_NOTES_V2.md  SDD.md  SOCIAL_MEDIA_POSTS.md  STRIPE_CLI_SETUP.md  TDD.md  THIRD_PARTY_AUDIT.md  V3_ideas.md  WILLOW_COMPETITIVE_ANALYSIS.md  YC_AGENT_SESSION.md  voco-raven-brand-prompts.md
Docs/legal/: CONTACT.md  PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
scripts/: bundle-python.ps1
services/cognitive-engine/: .dockerignore  .env.example  .env.production  .gitignore  DEPLOY.md  Dockerfile  README.md  deploy.ps1  docker-compose.prod.yml  docker-compose.yml  litellm_config.yaml  pyproject.toml
services/cognitive-engine/nginx/: nginx.conf
services/cognitive-engine/src/: constants.py  db.py  debug.py  errors.py  ide_mcp_server.py  main.py  orgo_client.py  telemetry.py  utils.py  voice_bridge.py
services/cognitive-engine/src/audio/: stt.py  tts.py  vad.py
services/cognitive-engine/src/auth/: routes.py
services/cognitive-engine/src/billing/: __init__.py  routes.py
services/cognitive-engine/src/graph/: background_worker.py  checkpointer.py  mcp_registry.py  nodes.py  router.py  session_memory.py  state.py  token_guard.py  tools.py  turn_archive.py
services/cognitive-engine/src/pipeline/: __init__.py  graph_phase.py  hitl_phase.py  session_context.py  stt_phase.py  tool_dispatch.py  tts_phase.py
services/cognitive-engine/supabase/migrations/: 001_initial_schema.sql  002_create_workspaces.sql  003_create_signup_ips.sql  004_create_usage_tracking.sql
services/cognitive-engine/tests/: test_audio.py  test_background_worker.py  test_bargein_routing.py  test_dead_code_removal.py  test_error_envelope.py  test_graph_routing.py  test_mcp_registry.py  test_orgo_client.py  test_orgo_tools.py  test_pipeline_text_input.py  test_production_smoke.py  test_session_memory.py  test_token_guard.py  test_tools_registration.py  test_turn_archive.py
services/mcp-gateway/: .env.example  .env.production  .gitignore  README.md  debug_console.py  index.html  orb.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
services/mcp-gateway/demos/: 001-microservice-extraction.md
services/mcp-gateway/public/: pcm-processor.js
services/mcp-gateway/src/: App.tsx  index.css  novnc.d.ts  orb-main.tsx  vite-env.d.ts
services/mcp-gateway/src-tauri/: 2  Cargo.toml  tauri.conf.json
services/mcp-gateway/src-tauri/capabilities/: default.json  desktop.json
services/mcp-gateway/src-tauri/src/: audio.rs  backend.rs  commands.rs  lib.rs  main.rs  screen.rs
services/mcp-gateway/src/components/: AuthModal.tsx  ChatThread.tsx  CommandApproval.tsx  CommandsModal.tsx  ErrorBoundary.tsx  FeedbackWidget.tsx  FloatingOrb.tsx  GhostTerminal.tsx  Header.tsx  OnboardingTour.tsx  OrgoSandboxView.tsx  PricingModal.tsx  ProtectedRoute.tsx  ReviewDeck.tsx  SandboxPreview.tsx  SettingsModal.tsx  SidebarPanel.tsx  SplashScreen.tsx  VisualLedger.tsx
services/mcp-gateway/src/components/ui/: calendar.tsx
services/mcp-gateway/src/data/: demo-script.archived.ts  demo-script.ts  voice-commands.ts
services/mcp-gateway/src/hooks/: use-app-updater.ts  use-audio-capture.ts  use-auth.ts  use-backend-ready.ts  use-demo-mode.archived.ts  use-demo-mode.ts  use-keybindings.ts  use-mobile.ts  use-settings.ts  use-usage-tracking.ts  use-voco-projects.ts  use-voco-socket.ts  use-workspaces.ts
services/mcp-gateway/src/integrations/supabase/: client.ts  types.ts
services/mcp-gateway/src/lib/: external-links.ts
services/mcp-gateway/src/pages/: AppPage.tsx  Landing.tsx
services/mcp-gateway/src/services/: billing.ts  licensing.ts
services/mcp-gateway/src/test/: orgo-integration.test.ts  production-smoke.test.ts  use-voco-socket.test.ts
services/mcp-gateway/src/types/: navigator.d.ts
services/synapse-mcp/: .env.example  .gitignore  README.md  build.ps1  build.py  build.sh  pyproject.toml
services/synapse-mcp/src/: server.py
services/synapse-mcp/tests/: test_synapse_server.py
