[project]
name = "voco-cognitive-engine"
version = "0.1.0"
description = "Voco V2 Cloud Cognitive Engine — LangGraph + VAD + FastAPI WebSocket bridge"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "langgraph",
    "langchain-core",
    "langchain-anthropic",
    "langchain-tavily",
    "PyGithub",
    "torch",
    "torchaudio",
    "numpy",
    "httpx[ws]",
    "python-dotenv",
    "mcp>=1.25,<2",
    "supabase>=2.0,<3",
    "stripe>=10.0.0",
    "langchain-openai>=1.1.10",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
