[project]
name = "voco-cognitive-engine"
version = "0.1.0"
description = "Voco V2 Cloud Cognitive Engine — LangGraph + VAD + FastAPI WebSocket bridge"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.32.0,<1",
    "websockets>=14.0,<15",
    "langgraph>=1.0.0,<2",
    "langchain-core>=1.2.0,<2",
    "langchain-anthropic>=1.3.0,<2",
    "langchain-tavily>=0.2.0,<1",
    "PyGithub>=2.5.0,<3",
    "torch>=2.5.0,<3",
    "torchaudio>=2.5.0,<3",
    "numpy>=2.0.0,<3",
    "httpx[ws]>=0.28.0,<1",
    "python-dotenv>=1.0.0,<2",
    "mcp>=1.25,<2",
    "supabase>=2.0,<3",
    "stripe>=10.0.0,<16",
    "langchain-openai>=1.1.10,<2",
    "litellm[proxy]>=1.0.0,<2",
    "opentelemetry-api>=1.25.0,<2",
    "opentelemetry-sdk>=1.25.0,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0,<2",
    "opentelemetry-instrumentation-fastapi>=0.46b0,<1",
    "langgraph-checkpoint-sqlite>=3.0.0,<4",
    "aiosqlite>=0.20.0,<1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
