[package]
name = "mcp-gateway"
version = "0.1.0"
description = "Voco V2 — Local MCP Gateway (Tauri)"
authors = ["Voco"]
license = ""
repository = ""
default-run = "mcp-gateway"
edition = "2021"

[lib]
name = "mcp_gateway_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mcp-gateway"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.19"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
