[package]
name = "mcp-gateway"
version = "0.1.0"
description = "Voco V2 — Local MCP Gateway (Tauri)"
authors = ["Voco"]
license = ""
repository = ""
default-run = "mcp-gateway"
edition = "2021"

[lib]
name = "mcp_gateway_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mcp-gateway"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.19"
xcap = "0.2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
